[tool.poetry]
name = "combine-coco"
version = "0.1.0"
description = ""
authors = ["ptmdmusique <ptmdmusic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
